# repo-health-score

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
dashboard/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  api.js
dashboard/src/components/: Badge.jsx  RepoCard.jsx  RepoDetail.jsx  ScoreChart.jsx
dashboard/src/styles/: index.css
src/repo_health_score/: __init__.py
src/repo_health_score.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/repo_health_score/cli/: __init__.py
src/repo_health_score/github/: __init__.py  client.py  manifests.py
src/repo_health_score/github_app/: __init__.py  app.py  auth.py  routes.py
src/repo_health_score/scoring/: __init__.py  ci_cd.py  community.py  dependencies.py  documentation.py  engine.py  issues.py  pulls.py  scanner.py
src/repo_health_score/web/: __init__.py  app.py  badge.py  database.py  models.py
tests/: __init__.py  test_scoring.py
